# autonomous_robot_simulation

./: .gitignore  .gitmodules  README.md  installer.sh
autonomous_robot_simulation/: CMakeLists.txt  package.xml
autonomous_robot_simulation/config/: config.yaml  display_map.yaml  simulation.yaml
autonomous_robot_simulation/include/: pcl_conversions.hpp
autonomous_robot_simulation/launch/: display_map_launch.py  one_robot_ign_launch.py
autonomous_robot_simulation/rviz/: display_map.rviz  localization.rviz  simulation.rviz
autonomous_robot_simulation/src/: lidar_imu_sync.cpp  pc2_to_xyzi.cpp  pcd_visualizer.cpp  tf_broadcaster.cpp
autonomous_robot_simulation/urdf/: ackermann.xacro  sensors_diffbot.xacro
autonomous_robot_simulation/utils/: depot_lanelet2_map.osm  test.osm
autonomous_robot_simulation/worlds/: depot.sdf  empty.sdf
fast_lio_ros2/: CMakeLists.txt  README.md  package.xml
fast_lio_ros2/Log/: fast_lio_time_log.csv  mat_out.txt  mat_pre.txt  pos_log.txt
fast_lio_ros2/PCD/: test.pcd
fast_lio_ros2/config/: ouster64.yaml  simulated.yaml  velodyne.yaml
fast_lio_ros2/launch/: mapping.launch.py
fast_lio_ros2/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
lidar_localization/: CMakeLists.txt  package.xml
lidar_localization/config/: localization.yaml
lidar_localization/include/lidar_localization/: lidar_localization_component.hpp  lidar_undistortion.hpp
lidar_localization/launch/: lidar_localization_launch.py
lidar_localization/src/: lidar_localization_component.cpp  lidar_localization_node.cpp
nmpc_controller/: CMakeLists.txt  README.md  package.xml
nmpc_controller/config/: sim_nmpc.yaml
nmpc_controller/include/: nmpc_controller.h
nmpc_controller/launch/: sim_nmpc.launch.py
nmpc_controller/scripts/: path_drawer.py
nmpc_controller/src/: nmpc_controller_node.cpp
nmpc_controller/src/nmpc_controller/: nmpc_controller.cpp
